--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -12,6 +12,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/help.html">Help</a></li>
+            <li><a href="/projects">Projects</a></li>
         </ul>
     </nav>
 </header>
